--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <div class="high_score">High score: 0</div>
       </div>
   
-      <div class="game-board" id="grid"></div>
+      <div class="game-board" id="grid">
+        <div class="game_over_board">
+          <h2>Game Over</h2>
+          <button id="replay_btn" onclick = 'location.reload()'>Replay</button>
+        </div>
+      </div>
     </div>
 
-    <script src="./js/test.js"></script>
     <script type="module" src="./js/app.js"></script>
   </body>
 </html>
