--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
           <button id="replay_btn" onclick = 'location.reload()'>Replay</button>
         </div>
       </div>
+
+      <div class="direction-buttons">
+        <button class="ArrowUp arrowBtns"></button>
+        <button class="ArrowLeft arrowBtns"></button>
+        <button class="ArrowDown arrowBtns"></button>
+        <button class="ArrowRight arrowBtns"></button>
+      </div>
+      
     </div>
 
     <script type="module" src="./js/app.js"></script>
